# CARLoS

./: .gitignore  README.md  index.html  pyproject.toml  pytest.ini  requirements-cu126.lock.txt
src/carlos/: __init__.py  _optional.py  bundled_db.py  config.py  database.py  generative_prompts.py  index.py  retrieve.py  types.py
src/carlos/data/: metrics_database.parquet
static/css/: comparison.css  gallery.css  index.css
static/js/: comparison.js  gallery.js
tests/: test_civitai_download_unit.py  test_config.py  test_database_core.py  test_index_functional.py  test_retrieve_functional.py  test_retrieve_unit.py
